# GenerativeGaitNet

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  pc_build.sh
core/: BVH.cpp  BVH.h  CMakeLists.txt  Character.cpp  Character.h  DARTHelper.cpp  DARTHelper.h  Environment.cpp  Environment.h  Muscle.cpp  Muscle.h  MuscleLimitConstraint.cpp  MuscleLimitConstraint.h  SimpleMotion.cpp  SimpleMotion.h
data/: JointMap.txt  SimpleMotionSet.txt  SkeletonParameter.xml  cascading_map.txt  ground.xml  metadata.txt  metadata_fullbody.txt  muscle_v6.xml  skeleton_v11.xml
data/joint_muscle/: Ankle.txt  Femur.txt  Talus.txt  Tibia.txt
data/motion/: walk.bvh
imgui_render/: CMakeLists.txt  GLFWApp.cpp  GLFWApp.h  GLfunctions.cpp  GLfunctions.h  ShapeRenderer.cpp  ShapeRenderer.h  main.cpp  stb_image_write.h
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glad_egl/include/glad/: glad_egl.h
libs/glad_egl/src/: glad_egl.c
libs/imgui/: imconfig.h  imgui_spectrum.cpp  imgui_spectrum.h
python/: CMakeLists.txt  NumPyHelper.cpp  NumPyHelper.h  RayEnvManager.cpp  RayEnvManager.h  imgui.ini  marginal_value_plot.py  mcmc.py  metadata_to_checkpoint.py  ray_config.py  ray_env.py  ray_model.py  ray_ppo.py  ray_torch_policy.py  ray_train.py  run_slurm.sh  run_slurm_single.sh
